# ChangeLog for games-fps/avp-cvs
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-fps/avp-cvs/ChangeLog,v 1.7 2004/06/24 22:40:50 agriffis Exp $

  03 Apr 2004; Donnie Berkholz <spyderous@gentoo.org>;
  avp-cvs-20031110.ebuild:
  Change XFree86 references to X11.

  30 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
  avp-cvs-20031110.ebuild:
  use emake; don't RDEPEND on sed; virtual/x11

  29 Dec 2003; Michael Sterrett <mr_bones_@gentoo.org>
  avp-cvs-20031110.ebuild:
  sed in unpack; make it easier to use live cvs; more error checking/messages

*avp-cvs-20031110 (10 Nov 2003)

  10 Nov 2003; Mike Frysinger <vapier@gentoo.org> :
  CVS snapshot so we dont keep overloading cvs server.

*avp-cvs-20030314 (11 Jul 2003)

  03 Sep 2003; Michael Sterrett <msterret@gentoo.org> avp-cvs-20030314.ebuild:
  use sed >= 4; tidy

  11 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Dirk-Jan Heijs <heijs@phys.rug.nl> #17529.