@@ -1,4 +1,4 @@
-MD5 dd6de7ff1450bda32f1bc8e1597a455f ChangeLog 1028
-MD5 8228277d3d490f63c972eab7638a02d3 avp-cvs-20031110.ebuild 1456
 MD5 f17b9b8fa07a38914fe1c03268f51678 metadata.xml 158
+MD5 95de2fa3cdbd63809fdf6ab62354ef4a avp-cvs-20031110.ebuild 1344
+MD5 9ba40526903c17685ba17b5471c3c27e ChangeLog 1144
 MD5 33255293ed4090137b6694a257d4029d files/digest-avp-cvs-20031110 66
